--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <title>HTML&CSS</title>
-    <style>
-      img {
-        width: 300px;
-        height: 200px;
-        border-radius: 15%;
-      }
-      .fr {
-        float: right;
-      }
-      .fa{
-          float: below;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
+  
   <body bgcolor="lightgray">
+    <div class="topnav" id="myTopnav">
+      <a href="#home" class="active">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <div class="dropdown">
+        <button class="dropbtn">Dropdown
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div>
+      <a href="#about">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div> 
     <a href="#HTML">HTML</a>
     <a href="#CSS">CSS</a>
     <a href="mailto:programmingwithfahimehed1630@gmail.com">Email me</a>
@@ -98,3 +104,11 @@
     <a class="fr" id="DOWN" href="#">TOP UP</a>
   </body>
 </html>
+<script>function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+} </script>
